# ai-portfolio

./: .gitignore  Instructions.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/miniscale_lm/: __init__.py  cli.py
tests/: __init__.py
